--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="https://firebasestorage.googleapis.com/v0/b/mern-estate-82894.appspot.com/o/logo%2FMyEstate-logo.jpeg?alt=media&token=ee825b0f-2de3-4015-936e-ad14242902a1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>MyEstate</title>
   </head>
   <body>
     <div id="root"></div>
